# TF_ODE

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  requirements.txt
env_data/: checker.tga  mars_checker.tga
meshes/: front.blend  front.mtl  front_fork.blend  front_fork.mtl  rear.blend  rear.mtl  rear_fork.blend  rear_fork.mtl  sea.blend  sea.mtl
ode/: box.hh  capped_cyl.hh  cylinder.hh  environment.cc  environment.hh  ft_sensor.cc  ft_sensor.hh  heightfield.hh  misc.hh  object.cc  object.hh  robot.hh  servo.cc  servo.hh  sphere.hh  visitor.hh  wheel.hh
renderer/: osg_keyboard.cc  osg_keyboard.hh  osg_text.cc  osg_text.hh  osg_visitor.cc  osg_visitor.hh  sim_loop.cc  sim_loop.hh
scripts/: DDPG_PER.py  DDPG_vanilla.py  DPPO.py  ERP-CFM.py  eval_and_extract_policies.sh  eval_policy.sh  extract_policies.sh  filters.py  fit_trees.sh  pendulum.py  plot_contributions.py  policy_apply_correction.py  policy_correction.py  policy_display.py  policy_tree.py  quadruped_training_1.py  rover_training_1.py  sample_tree_data.sh  setup.sh  shap_plots.py  train.sh  tree_diagram.py  tree_log.txt  tree_params2_1.yaml  tree_params2_2.yaml  tree_params_1.yaml  tree_params_2.yaml  tree_performance.sh  tree_plot.py  tree_selection.sh
src/: arm.cc  crawling.cc  data_collection_tf.cc  quadruped.cc  quadruped.hh  quadruped_training.cc  ramp.cc  rover.hh  rover_1.cc  rover_1_crawlers.cc  rover_1_mt.cc  rover_1_tf.cc  rover_mt.hh  rover_tf.hh  rover_training_1.cc  scene_1.cc  scene_1_mt.cc
utils/: filters.cc  filters.hh  filters2.hh  sim_loop.cc  sim_loop.hh
videos/: capture.sh  compose.sh  plot_internal_actuation.py  textinvideo.sh
